LBP 666 - alignment fixes

--- a/public/ti3.css
+++ b/public/ti3.css
@@ -301,6 +301,12 @@ h3 + p {
   margin-top: 0.8rem;
 }
 
+p + h1,
+p + h2,
+p + h3 {
+  margin-top: 0.8rem;
+}
+
 code {
     padding: 2px 4px;
     font-size: 0.9rem;
